--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@whero/tahua",
   "private": false,
-  "version": "0.0.10",
+  "version": "0.0.16",
   "type": "module",
   "files": [
     "dist/*"
@@ -17,12 +17,12 @@
     }
   },
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "build:visualize": "tsc && VISUALIZER=1 vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "typecheck": "tsc",
-    "storybook": "storybook dev -p 6006",
+    "dev": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -50,9 +50,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "next": "^13.4.19",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-preserve-directives": "^0.2.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "storybook": "^7.4.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
