--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "scripts": {
     "build": "tsc && vite build",
     "build:visualize": "tsc && VISUALIZER=1 vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "typecheck": "tsc",
     "dev": "storybook dev -p 6006",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "typecheck": "tsc",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -37,6 +38,9 @@
     "@storybook/react": "^7.4.2",
     "@storybook/react-vite": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -50,6 +54,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "jsdom": "^22.1.0",
     "next": "^13.4.19",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
